Fix horizontal scroll

--- a/src/components/bookmarkManager/BookmarkManager.module.scss
+++ b/src/components/bookmarkManager/BookmarkManager.module.scss
@@ -67,7 +67,7 @@
       &:before {
         position: absolute;
         content: "";
-        right: -10%;
+        right: -5.55%;
         top: 31%;
         height: 69%;
         width: calc(48% + 8vw); /* Adjust width based on viewport width */
